# family

pharma-mrp-poc/: .gitignore  cli.py  pyproject.toml
pharma-mrp-poc/examples/: convergent_4step.yaml  linear_5step.yaml  mc_yield_distributions.yaml  network_commercial.yaml  plant_site_a.yaml  plant_site_b.yaml  plant_site_c.yaml  prices_q2_2026.yaml  risk_profile_wuxi.yaml  sweep_capex_sensitivity.yaml  sweep_yield_price.yaml
pharma-mrp-poc/mrp/: capex.py  constraints.py  domain.py  engine.py  loader.py  montecarlo.py  network.py  optimisation.py  reporter.py  risk.py  sweep.py  units.py
pharma-mrp-poc/tests/: test_benchmarks.py  test_capex.py  test_dag.py  test_engine.py  test_montecarlo.py  test_network.py  test_optimisation.py  test_risk.py  test_sweep.py  test_units.py
pharma-risk-agent-poc/: .gitignore  README.md  cli.py  dashboard.py  eval_cli.py  label_app.py  pyproject.toml
pharma-risk-agent-poc/agent/: actions.py  adjudicator.py  assessor.py  collector.py  domain.py  eval.py  llm.py  mrp.py  reporter.py  rule_engine.py  state.py
pharma-risk-agent-poc/corpus/: labels.yaml
pharma-risk-agent-poc/eval/: dataset.py  evaluators.py  metrics.py  runner.py
pharma-risk-agent-poc/examples/: risk_profile.yaml  sensitivity_report_wuxi.json
pharma-risk-agent-poc/labeled_data/: export.jsonl
pharma-risk-agent-poc/prompts/: briefing_v1.0.0.txt  impact_v1.0.0.txt  metacognition_v1.0.0.txt  novelty_v1.0.0.txt  relevance_v1.0.0.txt  severity_v1.0.0.txt
pharma-risk-agent-poc/stub_responses/: README.md
pharma-risk-agent-poc/tests/: conftest.py  test_assessor.py  (+8 more)
(+184 files in other folders)
