[project]
name = "pharma-mrp-poc"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pint>=0.23",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "typer>=0.12",
    "rich>=13.0",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.0",
]

[project.scripts]
mrp = "cli:app"

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mrp*"]
