[project]
name = "pharma-risk-agent-poc"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pharma-mrp-poc",
    "anthropic>=0.28",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
agent = "cli:app"

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
